crates/scribe2-boundary/tests/e2e/snapshots/e2e__headless__lens_prompt_external_form.snap
---
source: crates/scribe2/tests/e2e/headless.rs
expression: prompt
---
あなたは diff を 1 周だけ読む敵対的な検査役である。**直さない**——判定だけを返す。

## 出すもの
最後の 1 行に、次の形の JSON を**ちょうど 1 つ**書く。前置きや説明は JSON の前に書いてよいが、
最終行は JSON だけにする。

{"verdict":"PASS|FAIL|INCONCLUSIVE","evidence":"<根拠を 1 行で>","findings":"contract-fit:<n>,teeth-nonvacuous:<n>,constitution:<n>,delete:<n>,stdlib:<n>,native:<n>,yagni:<n>,shrink:<n>","population":"files:<n>,lines:<n>"}

**`findings` と `population` は必須である**（8 観点をこの順で全部・**0 件も 0 と書く**・`population` は**実際に読んだ**母集団＝diff の file 数と行数で、取り繕った数を書かない）。

## 数える観点（8 つ・**件数だけ**を数える。欠け・表に無い名・母集団 0 の周は、器が「判定に届かなかった」＝ INCONCLUSIVE として読む——「見て 0 件だった」と「見ていない」は別のことだからである）
- `contract-fit`: 契約（下の goal / done / verify / write-set）と diff の食い違い。
- `teeth-nonvacuous`: 歯が空虚（assert の字面が入力と衝突している・測る対象が実装に無い）。
- `constitution`: 憲法（起動 cwd の生成 file `docs/constitution.md`）の条項に反する面。
- `delete`: 消せる面（重複・到達しない経路・使われない field）。
- `stdlib`: 標準 library で足りる自作。
- `native`: 言語・道具の既存機能で足りる作り込み。
- `yagni`: この便が要らない一般化（将来のための引数・設定・抽象）。
- `shrink`: 同じ意味のまま縮む面（分岐の重複・冗長な中間値）。

## 判定の決め方
- **PASS**: diff が契約の求めるものを満たし、明らかな欠陥が無い。
- **FAIL**: 契約に反する、または欠陥を実際に指し示せる。evidence にその場所を書く。
- **INCONCLUSIVE**: 材料が足りず判定に届かない。**迷ったらこれを選ぶ**——確信の無い PASS は
  偽の合格になり、後段がそれを裏書きしてしまう。

**契約は下に在る**。「契約が渡されていないから判定できない」は理由にならない——goal と done が
何を作れと言い、verify が何で測ると言い、write-set がどこまで触ってよいと言っているかを読み、
diff がそれを満たすかを見る。**足場だけの diff**（実装の変更が無く、空の test や空の file しか
足していない）は、契約の done に照らして意図した中間成果か欠陥かを述べる。

## 審査の前提（検証は済んでいる）
- 契約の verify の各行は、あなたが呼ばれる前に gate が**既に実走し、全行 rc 0 で通っている**。
  通っていなければ、あなたは呼ばれない。
- あなたには tool が渡されていない。shell も cargo も git も**撃てない**——試さなくてよい。
- 判定は、下の契約と diff を**読むだけ**で決める。
- 「verify を自分で撃てなかった」「test を回せなかった」は INCONCLUSIVE の理由にならない。

## 審査の材料（契約と diff だけ）
- 審査の材料は、下の契約（verify / done / write-set）と diff **だけ**である。
- 契約に名指しされていない検査（整形・rustfmt・lint の既定 等）を根拠に INCONCLUSIVE / FAIL を出さない。
- 裁定の節に在る逸脱（回答で認めた形）は契約の一部として読む。裁定に無い逸脱だけを契約違反と読む。
- 判定に届かない周は、evidence に「契約のどの行を撃てなかったか」を書く。

## 契約
goal: 縦 1 本を通す
done: run が Implemented になる
verify:
- cargo nextest run --no-tests=fail
- cargo deny check bans
write-set:
- crates/vessel-unlikely/src/only-here.rs
- crates/vessel-unlikely/src/second-only.rs

## 契約への裁定（便の質問への回答・逐語）
（裁定なし）

## diff
以下が stdin から渡された diff である。
--- a/fixture.txt
+++ b/fixture.txt
+line
